name:          unbounded-delays
version:       0.1
cabal-version: >= 1.6
build-type:    Simple
author:        Bas van Dijk <v.dijk.bas@gmail.com>
               Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
               Roel van Dijk <vandijk.roel@gmail.com>
copyright:     (c) 2011 Bas van Dijk & Roel van Dijk
license:       BSD3
license-file:  LICENSE
category:      Concurrency
synopsis:      Arbitrarily long thread delays and timeouts
description:
  This package provides:
  .
  * @Thread.Delay@: Arbitrarily long thread delays.
  .
  * @Timeout@: Wait arbitrarily long for an IO computation to finish.
  
source-repository head
  Type: darcs
  Location: http://code.haskell.org/~basvandijk/code/unbounded-delays

library
  build-depends: base                 >= 3     && < 4.4
               , base-unicode-symbols >= 0.1.1 && < 0.3
  exposed-modules: Control.Concurrent.Thread.Delay
                 , Control.Concurrent.Timeout
  ghc-options: -Wall
